--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 /* Global styles */
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -17,9 +18,9 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 4px solid #181C14;
+  border: 4px solid #181c14;
   border-radius: 50px;
-  background-color: #ECDFCC;
+  background-color: #ecdfcc;
   padding: 20px;
   max-width: 600px;
   width: 100%;
@@ -31,7 +32,7 @@ html, body {
   font-size: 5rem;
   font-family: monospace;
   font-weight: bold;
-  color: #3C3D37; 
+  color: #3c3d37;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
   margin-bottom: 25px;
 }
